Update gallery.less to resolve T660678
I.E. Gallery stretches images, Tech support pointed to this Stackoverflow thread: https://stackoverflow.com/questions/36822370/flexbox-on-ie11-image-stretched-for-no-reason
Making the change in the CSS for "dx-gallery-item-image" to include the "flex-shrink: 0;" setting resolves this issue in I.E.

--- a/styles/widgets/common/gallery.less
+++ b/styles/widgets/common/gallery.less
@@ -37,6 +37,7 @@
     max-width: 100%;
     height: auto;
     margin: auto;
+    flex-shrink: 0;
 }
 
 .dx-gallery-item-content {
